# catnip

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  dockerfile
app/: Cargo.toml
app/src/: database.rs  main.rs  stream_notify.rs
app/src/commands/: general.rs  mod.rs  roll.rs
app/src/commands/animals/: cat.rs  dog.rs  mod.rs
app/src/commands/cat/: mod.rs  models.rs
app/src/commands/debug/: debug.rs
app/src/commands/user/: colour.rs  colours.rs  mod.rs  title.rs
mount/sql/: 001_initial_schema.sql  002_user_roleplay_title.sql
sqlite/: setup.sql
src/: database.rs  main.rs  stream_notify.rs
src/commands/: cat.rs  general.rs
