[package]
name = "catnip"
version = "0.1.0"
authors = ["skrytt"]
edition = "2018"

[dependencies]
dotenv = "0.15"
env_logger = "0.6"
log = "0.4"
rand = "0.7"
reqwest = "0.10.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.10.1"
time = "0.1"
tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread"] }

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]